[ADD] train & test model

--- a/templates/put_youtube_link.html
+++ b/templates/put_youtube_link.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src = "{{ url_for("static", filename="index.js") }}"></script>
+        <script src = "{{ url_for("static", filename="put_youtube_link.js") }}"></script>
     </head>
     <body>
         <!--
